unpackaged/main/default/objects/Encuesta__c/fields/Por_Entregar__c.field-meta.xml
<CustomField>
    <fullName>Por_Entregar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Por Entregar</label>
    <referenceTo>Entrega__c</referenceTo>
    <relationshipLabel>Encuestas</relationshipLabel>
    <relationshipName>Encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>