unpackaged/main/default/objects/Encuesta__c/fields/Pregunta1__c.field-meta.xml
<CustomField>
    <fullName>Pregunta1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(Portal de clientes, Centro de contacto, Correo electrónico, etc.)</inlineHelpText>
    <label>1¿Conoce los medios de contacto Javer?</label>
    <type>Checkbox</type>
</CustomField>