unpackaged/main/default/objects/Encuesta__c/fields/Pregunta2__c.field-meta.xml
<CustomField>
    <fullName>Pregunta2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2¿Cumplió la expectativa de su vivienda?</label>
    <type>Checkbox</type>
</CustomField>