unpackaged/main/default/objects/Encuesta__c/fields/Pregunta3__c.field-meta.xml
<CustomField>
    <fullName>Pregunta3__c</fullName>
    <inlineHelpText>Del 1 al 10 ¿Que tan probable es que usted recomiende Casas Javer a un amigo o familiar?</inlineHelpText>
    <label>3¿Probabilidad recomiende Casas Javer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>