unpackaged/main/default/objects/Encuesta__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>